--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -8,10 +8,10 @@
     flex-direction: column;
   }
 
- 
   .left {
     flex: 1;
     overflow: hidden;
+    
 
     img {
       height: 100%;
@@ -23,65 +23,53 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-right: 15%;
-    @include mobile {
-      padding-top: 20px;
-      padding-right: 5px;
-      justify-content:flex-start;
+    margin-left: 10px;
+
+    .c-desc {
+      font-weight: 300;
+      text-decoration: underline;
     }
 
     h2 {
       font-size: 30px;
-      @include mobile {
-        font-size: 25px;
-      }
     }
 
-    Form {
-      width: 90%;
-      height: 60%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
 
-      @include mobile {
-        margin-top: 10px;
-       row-gap: 10px;
-      }
+    form {
+      margin-top: 20px;
 
-      .field {
-        width: 400px;
-        height: 30px;
+      input {
+        width: 50%;
+        height: 50px;
+        border: none;
+        border-bottom: 1px solid black;
+        margin: 10px 0px;
         font-size: 14px;
+        padding-left: 10px;
 
         @include mobile {
-          width: 250px;
+          width: 200px;
           height: 20px;
         }
-
       }
 
-      .textarea {
-        width: 400px;
-        height: 150px;
+      textarea {
+        width: 90%;
+        margin: 10px 0px;
         font-size: 14px;
+        padding-left: 10px;
 
         @include mobile {
-          width: 250px;
+          width: 200px;
           height: 100px;
         }
+      }
 
-      }
-      .error{
-        font-size: 11px;
-        color:red;
-      }
       button {
         width: 150px;
         height: 30px;
         color: white;
-        background-color: $mainColor;
+        background-color: green;
         border: none;
         border-radius: 10px;
         font-weight: 500;
